<resources>
    <string name="app_name">Kpk Go</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">abrir cajonera</string>
    <string name="drawer_close">cerrar cajonera</string>
    <string name="categories">Categorias</string>
    <string name="dish_description">Un delicioso plato de tonalidades suaves y fuerte sabor a pino</string>
    <string name="dish_image">Dish image</string>
    <string name="favourite">Favourite</string>
    <string name="delivery">Add to cart</string>
    <string name="cart">Order</string>
    <string name="dialog_quantity_accept">AÑADIR</string>
    <string name="dialog_quantity_title">Cuantos quieres?</string>
    <string name="dialog_quantity_cancel">CANCELAR</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_buy">Comprar</string>
    <string name="checkout_discard">Volver</string>
    <string name="checkout_total_amout">TOTAL</string>
    <string name="your_purchase">Tu compra</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="your_profile">Tu perfil</string>
    <string name="facebook_app_id">1656535217926775</string>
    <string name="unitary_price">%1.2f € / ud.</string>
    <string name="price_euro">%1.2f €</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="street_name">Nombre de la calle y numero:</string>
    <string name="number_flat_door">Piso, letra, escalera:</string>
    <string name="postal_code">Codigo postal:</string>
    <string name="special_indications">Alguna indicacion especial:</string>
    <string name="hint_street">Avenida de Europa 72</string>
    <string name="hint_number_floor">3ero B</string>
    <string name="hint_postal_code">28224</string>
    <string name="hint_special_indications">telefonillo llamar a oficina 2</string>
    <string name="button_register_go">continuar</string>
    <string name="finish_registration">terminar</string>
    <string name="error_street">debes introducir el nombre de tu calle</string>
    <string name="postal_code_error">Debes introducir un codigo postal correcto</string>
    <string name="loading_dishes">cargando el menu</string>
    <string name="hint_phone_number">666554433</string>
    <string name="phone_number">Telefono:</string>
    <string name="error_phone">Debes introducir un telefono valido</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_header">CARTA</string>
    <string name="nav_featured_products">Destacados</string>
    <string name="products_title">CARTA</string>
    <string name="nav_products_list">Productos</string>
    <string name="nav_product_search">Busqueda</string>
    <string name="view_profile">Ver perfil</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_my_orders">Mis pedidos</string>
    <string name="fav_orders">Pedidos favoritos</string>
    <string name="view_more">Ver todos</string>
    <string name="last_order">Ultimo pedido</string>
    <string name="repeat_button">Repetir</string>
    <string name="more_info">MAS INFO</string>
    <string name="add">AÑADIR</string>
    <string name="add_to_cart_dialog">Añadir al carrito</string>
    <string name="delivery_option">DOMICILIO</string>
    <string name="pick_up_option">RECOGER</string>
    <string name="minimun_order">Pedido minimo %1.2f €</string>
    <string name="orders_active">ACTIVOS</string>
    <string name="orders_history">ULTIMOS</string>
    <string name="orders_fav">FAVORITOS</string>
    <string name="add_to_fav">AÑADIR A FAVORITOS</string>
    <string name="order_line">%1$d x %2$s</string>
    <string name="here_will_be_last_orders">Aqui aparecera tu ultimo pedido</string>
    <string name="register_to_get_products">Registrate y tendras tus platos favoritos al alcance de un click</string>
    <string name="register_now">Registrate</string>
    <string name="log_in">Iniciar sesion</string>
    <string name="registration">Registro</string>
    <string name="order_title">Pedido</string>
    <string name="order_updated">Pedido actualizado</string>
    <string name="title_activity_closed">closedActivity</string>
    <string name="we_are_closed">Lo sentimos! \n\nEn estos momentos estamos cerrados y no aceptamos pedidos.</string>
    <string name="schedule">Nuestro horario es: \nDe %1$s a %2$s y de %3$s a %4$s </string>

</resources>
