<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nxtlink.kaprika.activities.CheckoutActivity">

    <ListView
        android:layout_margin="6dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/checkout_holder"
        android:id="@+id/cart_item_list" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/checkout_holder"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/checkout_total_amout"
            android:id="@+id/price_sum_title" />

        <TextView
            android:layout_marginLeft="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="23e"
            android:id="@+id/checkout_price_sum" />
    </LinearLayout>


        <LinearLayout
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="6dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:minEms="8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_red"
                android:text="@string/checkout_discard"
                android:id="@+id/checkout_discard" />

            <Button
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:minEms="8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_blue"
                android:text="@string/checkout_buy"
                android:id="@+id/checkout_buy" />


        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
